[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Level2.gd" type="Script" id=1]
[ext_resource path="res://Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Jeremias.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Metralheiro.gd" type="Script" id=4]
[ext_resource path="res://Art/Viloes_desenho/hexagono_vilao3/thirdBoss.png" type="Texture" id=5]
[ext_resource path="res://Fade.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31.867, 32 )

[node name="Level2" type="Node"]

script = ExtResource( 1 )

[node name="Floor" parent="." index="0" instance=ExtResource( 2 )]

[node name="Jeremias" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 101.939, 438.781 )

[node name="Metralheiro" type="KinematicBody2D" parent="." index="2"]

position = Vector2( 888.435, 433.105 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Metralheiro" index="0"]

scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Metralheiro" index="1"]

position = Vector2( 11.4031, -2.44354 )
shape = SubResource( 1 )

[node name="BulletSpawner" type="Position2D" parent="Metralheiro" index="2"]

position = Vector2( -68.1367, -18.7336 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="Metralheiro/BulletSpawner" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="TimerRajada" type="Timer" parent="Metralheiro/BulletSpawner" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Fade" parent="." index="3" instance=ExtResource( 6 )]

stretch_mode = 0

[connection signal="timeout" from="Metralheiro/BulletSpawner/Timer" to="Metralheiro" method="_on_Timer_timeout"]

[connection signal="timeout" from="Metralheiro/BulletSpawner/TimerRajada" to="Metralheiro" method="_on_TimerRajada_timeout"]


